# ai-chupacabras-playground

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  settings.example.yml
models/: factory.py  llm_settings.py
plays/: crew_ai_example.py  environment_analyzer.py  job_description_generator.py  linkedin_profile_improvement.py  play_azure_gpt.py  play_azure_gpt35turbo.py  rag.py
tests/: dependencies.py
