[tool.poetry]
name = "ai-chupacabras-playground"
version = "0.1.0"
description = "A small playground to test AI models."
authors = ["Chupacabras <dayvison.w.pellegrina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
langchain = ">=0.1.10,<0.2.0"
envyaml = "^1.10.211231"
python-box = "^7.1.1"
crewai = "^0.30.11"
google-generativeai = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
